--- a/src/Sylius/Bundle/AdminBundle/Resources/views/Taxon/_treeWithoutButtons.html.twig
+++ b/src/Sylius/Bundle/AdminBundle/Resources/views/Taxon/_treeWithoutButtons.html.twig
@@ -38,5 +38,5 @@
     <a href="#" class="sylius-tree__toggle-all" data-sylius-js-tree-trigger>
         <i class="icon">&bull;</i>{{ 'sylius.ui.toggle_all'|trans }}
     </a>
-    {{ tree.render(taxons) }}
+    {{ tree.render(taxa) }}
 </div>
