--- a/src/Sylius/Bundle/AdminBundle/Resources/views/Product/Tab/_details.html.twig
+++ b/src/Sylius/Bundle/AdminBundle/Resources/views/Product/Tab/_details.html.twig
@@ -23,7 +23,9 @@
                         {% if product.simple %}
                             {{ form_row(form.variant.translations) }}
                         {% endif %}
-                        {{ form_row(form.variantSelectionMethod) }}
+                        {% if not form.variantSelectionMethod.isRendered %}
+                            {{ form_row(form.variantSelectionMethod) }}
+                        {% endif %}
                     </div>
                 </div>
             </div>
