--- a/src/Sylius/Bundle/ShopBundle/Resources/views/Account/changePassword.html.twig
+++ b/src/Sylius/Bundle/ShopBundle/Resources/views/Account/changePassword.html.twig
@@ -29,7 +29,9 @@
         {{ sylius_template_event('sylius.shop.account.change_password.form', {'form': form}) }}
 
         <button type="submit" {{ sylius_test_html_attribute('save-changes') }} class="ui large primary button">{{ 'sylius.ui.save_changes'|trans }}</button>
-        {{ form_row(form._token) }}
+        {% if not form._token.isRendered %}
+            {{ form_row(form._token) }}
+        {% endif %}
         {{ form_end(form, {'render_rest': false}) }}
     </div>
 {% endblock %}
