--- a/src/Sylius/Bundle/ShopBundle/Resources/views/Account/requestPasswordReset.html.twig
+++ b/src/Sylius/Bundle/ShopBundle/Resources/views/Account/requestPasswordReset.html.twig
@@ -21,7 +21,9 @@
 
                 {{ sylius_template_event('sylius.shop.request_password_reset_token.form', {'form': form}) }}
 
-                {{ form_row(form._token) }}
+                {% if not form._token.isRendered %}
+                    {{ form_row(form._token) }}
+                {% endif %}
                 <button type="submit" class="ui fluid large primary submit button" {{ sylius_test_html_attribute('request-password-reset-button') }}>
                     {{ 'sylius.ui.reset'|trans }}
                 </button>
