--- a/src/Sylius/Bundle/ShopBundle/Resources/views/Account/resetPassword.html.twig
+++ b/src/Sylius/Bundle/ShopBundle/Resources/views/Account/resetPassword.html.twig
@@ -17,7 +17,9 @@
                 {{ form_start(form, {'action': path('sylius_shop_password_reset', {'token' : user.passwordResetToken}), 'attr': {'class': 'ui large loadable form', 'novalidate': 'novalidate'}}) }}
                 {{ form_row(form.password.first, sylius_test_form_attribute('password-reset-new')|merge({'label': 'sylius.form.user_reset_password.new'|trans})) }}
                 {{ form_row(form.password.second, sylius_test_form_attribute('password-reset-confirmation')|merge({'label': 'sylius.form.user_reset_password.confirmation'|trans})) }}
-                {{ form_row(form._token) }}
+                {% if not form._token.isRendered %}
+                    {{ form_row(form._token) }}
+                {% endif %}
                 <button type="submit" class="ui fluid large primary submit button" {{ sylius_test_html_attribute('login-password-reset-button') }}>
                     {{ 'sylius.ui.reset'|trans }}
                 </button>
