--- a/src/Sylius/Bundle/ShopBundle/Resources/views/Checkout/complete.html.twig
+++ b/src/Sylius/Bundle/ShopBundle/Resources/views/Checkout/complete.html.twig
@@ -25,7 +25,9 @@
 
             {% include '@SyliusShop/Checkout/Complete/_navigation.html.twig' %}
 
-            {{ form_row(form._token) }}
+            {% if not form._token.isRendered %}
+                {{ form_row(form._token) }}
+            {% endif %}
         {{ form_end(form, {'render_rest': false}) }}
     </div>
 {% endblock %}
