--- a/src/Sylius/Bundle/AdminBundle/Resources/views/Order/Update/_content.html.twig
+++ b/src/Sylius/Bundle/AdminBundle/Resources/views/Order/Update/_content.html.twig
@@ -16,7 +16,9 @@
 
     {{ sylius_template_event('sylius.admin.order.update.form', {'resource': resource}) }}
 
-    {{ form_row(form._token) }}
+    {% if not form._token.isRendered %}
+        {{ form_row(form._token) }}
+    {% endif %}
     {% include '@SyliusUi/Form/Buttons/_update.html.twig' with {'paths': {'cancel': path('sylius_admin_order_index')}} %}
 </div>
 {{ form_end(form, {'render_rest': false}) }}
