--- a/src/Sylius/Bundle/AdminBundle/Resources/views/ProductVariant/Generate/_content.html.twig
+++ b/src/Sylius/Bundle/AdminBundle/Resources/views/ProductVariant/Generate/_content.html.twig
@@ -11,5 +11,7 @@
     </div>
     {{ sylius_template_event('sylius.admin.product_variant.generate.form', {'resource': resource}) }}
 </div>
-{{ form_row(form._token) }}
+{% if not form._token.isRendered %}
+    {{ form_row(form._token) }}
+{% endif %}
 {{ form_end(form, {'render_rest': false}) }}
