--- a/src/Sylius/Bundle/AdminBundle/Resources/views/PromotionCoupon/Generate/_formWidget.html.twig
+++ b/src/Sylius/Bundle/AdminBundle/Resources/views/PromotionCoupon/Generate/_formWidget.html.twig
@@ -12,5 +12,7 @@
 
     {{ sylius_template_event('sylius.admin.promotion_coupon.generate.form', {'resource': promotion}) }}
 </div>
-{{ form_row(form._token) }}
+{% if not form._token.isRendered %}
+    {{ form_row(form._token) }}
+{% endif %}
 {{ form_end(form, {'render_rest': false}) }}
