--- a/src/Sylius/Bundle/ShopBundle/Resources/views/Account/AddressBook/_defaultAddressForm.html.twig
+++ b/src/Sylius/Bundle/ShopBundle/Resources/views/Account/AddressBook/_defaultAddressForm.html.twig
@@ -5,5 +5,7 @@
     <button type="submit" class="ui labeled icon teal button" {{ sylius_test_html_attribute('set-as-default-button') }}>
         <i class="save icon"></i>{{ 'sylius.ui.set_as_default'|trans }}
     </button>
-{{ form_row(form._token) }}
+{% if not form._token.isRendered %}
+    {{ form_row(form._token) }}
+{% endif %}
 {{ form_end(form, {'render_rest': false}) }}
