--- a/src/Sylius/Bundle/ShopBundle/Resources/views/Account/AddressBook/update.html.twig
+++ b/src/Sylius/Bundle/ShopBundle/Resources/views/Account/AddressBook/update.html.twig
@@ -30,7 +30,9 @@
 
         {{ sylius_template_event('sylius.shop.account.address_book.update.form', {'address': address}) }}
 
-        {{ form_row(form._token) }}
+        {% if not form._token.isRendered %}
+            {{ form_row(form._token) }}
+        {% endif %}
         {{ form_end(form, {'render_rest': false}) }}
     </div>
 {% endblock %}
