--- a/src/Sylius/Bundle/ShopBundle/Resources/views/Checkout/selectPayment.html.twig
+++ b/src/Sylius/Bundle/ShopBundle/Resources/views/Checkout/selectPayment.html.twig
@@ -20,7 +20,9 @@
                     {{ sylius_template_event('sylius.shop.checkout.select_payment.before_navigation', {'order': order}) }}
                     {% include '@SyliusShop/Checkout/SelectPayment/_navigation.html.twig' %}
 
-                    {{ form_row(form._token) }}
+                    {% if not form._token.isRendered %}
+                        {{ form_row(form._token) }}
+                    {% endif %}
                 {{ form_end(form, {'render_rest': false}) }}
             </div>
         </div>
