--- a/src/Sylius/Bundle/ShopBundle/Resources/views/Checkout/selectShipping.html.twig
+++ b/src/Sylius/Bundle/ShopBundle/Resources/views/Checkout/selectShipping.html.twig
@@ -21,7 +21,9 @@
 
                     {% include '@SyliusShop/Checkout/SelectShipping/_navigation.html.twig' %}
 
-                    {{ form_row(form._token) }}
+                    {% if not form._token.isRendered %}
+                        {{ form_row(form._token) }}
+                    {% endif %}
                 {{ form_end(form, {'render_rest': false}) }}
             </div>
         </div>
