--- a/src/Sylius/Bundle/ShopBundle/Resources/views/Order/show.html.twig
+++ b/src/Sylius/Bundle/ShopBundle/Resources/views/Order/show.html.twig
@@ -18,7 +18,9 @@
                 <i class="check icon"></i> {{ 'sylius.ui.pay'|trans }}
             </button>
 
-            {{ form_row(form._token) }}
+            {% if not form._token.isRendered %}
+                {{ form_row(form._token) }}
+            {% endif %}
             {{ form_end(form, {'render_rest': false}) }}
         {% else %}
             {{ messages.info('sylius.ui.you_can_no_longer_change_payment_method_of_this_order') }}
