--- a/src/Sylius/Bundle/ShopBundle/Resources/views/Product/Show/_addToCart.html.twig
+++ b/src/Sylius/Bundle/ShopBundle/Resources/views/Product/Show/_addToCart.html.twig
@@ -20,6 +20,8 @@
     {{ sylius_template_event('sylius.shop.product.show.add_to_cart_form', {'product': product, 'order_item': order_item}) }}
 
     <button type="submit" class="ui huge primary icon labeled button" {{ sylius_test_html_attribute('add-to-cart-button') }}><i class="cart icon"></i> {{ 'sylius.ui.add_to_cart'|trans }}</button>
-    {{ form_row(form._token) }}
+    {% if not form._token.isRendered %}
+        {{ form_row(form._token) }}
+    {% endif %}
     {{ form_end(form, {'render_rest': false}) }}
 </div>
